test/files/neg/t2509-3.check
t2509-3.scala:32: error: value value is not a member of B
    println("B: " + b.value)
                      ^
1 error
